# default-of-credit-card-clients-mlops

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  dvc.yaml  example_cal.py  hw1.md  hw2.md  hw3.md  justfile  pyproject.toml  test.py
dvc/test/: metrics.json
dvc/test-delay-num/: metrics.json
dvc/test-delay-num/plots/metrics/: accuracy.tsv  f1.tsv  precision.tsv  recall.tsv
dvc/test-delay-only/plots/metrics/: precision.tsv  recall.tsv
dvc/test-dummy/: metrics.json
dvc/test-dummy/plots/metrics/: accuracy.tsv  f1.tsv
dvc/test/plots/metrics/: accuracy.tsv  f1.tsv  precision.tsv  recall.tsv
dvc/train/: .gitignore  metrics.json  params.yaml.dvc
dvc/train/plots/metrics/: accuracy.tsv  f1.tsv  precision.tsv  recall.tsv
src/dcc/: __main__.py
src/dcc/inference/: explainer.py
src/dcc/preprocessing/: test.py
src/dcc/training/: train-1.py  train.py.dvc  train_1.py  train_2.py  train_test_split.py
tasks/: clean.just  doc.just  kaggle.just
tests/: test_scripts.py
