# https://docs.astral.sh/uv/reference/settings/
# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/

# PROJECT

[project]
name = "default-of-credit-card-clients-mlops"
version = "0.1.0"
description = "TODO"
authors = [{ name = "hsiangjenli" }]
# readme = "README.md"
# license = { file = "LICENSE.txt" }
keywords = ["mlops", "python", "package"]
requires-python = ">=3.11"
dependencies = [
    "hatchling>=1.27.0",
    "mlflow>=2.20.3", "pandas~=2.2.3", "numpy~=2.2.3", "matplotlib~=3.10.1", "seaborn~=0.13.2", "scikit-learn~=1.6.1", "dvclive~=3.48.2",
]

# LINKS

[project.urls]
Homepage = "https://github.com/hsiangjenli/default-of-credit-card-clients-mlops"
Documentation = "https://hsiangjenli.github.io/default-of-credit-card-clients-mlops/"
Repository = "https://github.com/hsiangjenli/default-of-credit-card-clients-mlopse"
"Bug Tracker" = "https://github.com/hsiangjenli/default-of-credit-card-clients-mlops/issues"
Changelog = "https://github.com/hsiangjenli/default-of-credit-card-clients-mlops/blob/main/CHANGELOG.md"

# SCRIPTS

[project.scripts]
default-of-credit-card-clients-mlops = "dcc.scripts:main"

# DEPENDENCIES

[dependency-groups]
check = [
    "bandit>=1.8.3",
    "coverage>=7.6.12",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "pytest-xdist>=3.6.1",
    "ruff>=0.9.9",
]
commit = ["commitizen>=4.4.1", "pre-commit>=4.1.0"]
dev = ["rust-just>=1.39.0"]
doc = ["pdoc>=15.0.1"]
notebook = ["ipykernel>=6.29.5", "nbformat>=5.10.4"]

[tool]
rye = { dev-dependencies = ["dvc~=3.59.1"] }

# TOOLS

[tool.uv]
default-groups = ["check", "commit", "dev", "doc", "notebook"]

[tool.bandit]
targets = ["src"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true

[tool.coverage.run]
branch = true
source = ["src"]
omit = ["__main__.py"]

[tool.mypy]
pretty = true
python_version = "3.11.3"
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--verbosity=2"
pythonpath = ["src"]

[tool.ruff]
fix = true
indent-width = 4
line-length = 100
target-version = "py313"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["D100", "D103"]

[tool.hatch.build.targets.wheel]
packages = ["src/dcc"]

# SYSTEMS

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
